style - fix footer overflow

--- a/components/footer/footer.styles.css
+++ b/components/footer/footer.styles.css
@@ -18,14 +18,7 @@ footer{
     color: white;
 
     }
-.left-footer{
-  width: 50%;
-  display: flex;
-  flex-direction: column;
-  align-items: start;
-  gap: 10px;
- 
-}
+
 
 .left-footer{
   width: 50%;
@@ -46,14 +39,14 @@ footer{
 
 .right-footer{
   width: 50%;
-  display: flex;
+  display: grid;
   padding: 0 0 0 20px;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
   gap: 10px;
 
    & .left{
-    width: 50%;
+    width: 100%;
    }
 }
 
